--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -13,12 +13,15 @@
   width: 100px;
   font-size: 12px;
   margin: 10px auto;
+  cursor: pointer;
 }
 .input {
   width: 200px;
   padding: 5px;
+  height: 10px;
 }
 .label {
   margin-left: 9px;
   font-size: 10px;
+  padding: 10px;
 }
