--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -3,26 +3,35 @@
   border: 1px solid darkgrey;
   border-radius: 5px;
   flex-direction: column;
-  width: 300px;
+  width: 230px;
+  height: auto;
   gap: 10px;
-  justify-content: start;
-  align-items: start;
+}
+.label {
+  font-size: 10px;
+  padding: 10px;
+}
+.input {
+  width: 200px;
+  padding: 5px;
+  height: 10px;
+  margin-top: 5px;
+}
+.span {
+  margin-bottom: 5px;
+  font-size: 15px;
 }
 .button {
+  width: 100px;
+  margin: 0 auto;
   background-color: lightgray;
   border: 1px solid darkgrey;
   border-radius: 5px;
-  width: 100px;
   height: 30px;
   font-size: 12px;
   margin: 10px auto;
   cursor: pointer;
 }
-.input {
-  width: 300px;
-  padding: 5px;
-}
-.label {
-  margin-left: 9px;
-  font-size: 10px;
+.button:hover {
+  background-color: darkgray;
 }
